# Teaching-Assitance

./: .env.example  .gitignore  README.md  analyze_chunks.py  main.py  prepare_deploy.sh  promptfoo.yaml  pyproject.toml
api/: main.py
data_source/: chunking.py  course_content.npz  embed.py  embed2.py  html_to_md.py  scrape.py
deploy/: asgi.py
deploy/api/: index.py
